Fixed recaptcha behind footer bug

--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,7 @@ blockquote p {
 .footer {
   margin-top: auto;
 }
+
+.grecaptcha-badge {
+  z-index: 999;
+}
